--- a/lab.tex
+++ b/lab.tex
@@ -96,7 +96,39 @@ Jak widać na rys. \ref{fig:1}, ciało rozpoczyna spadek na wysokości $h=h_0$, 
 
 W Tabeli \ref{long} zamieszczono wyniki kolejnych pomiarów czasu i przebytej drogi przez ciało podczas 10 sekund spadku swobodnego.
 
-\newpage
+\begin{tikzpicture}[xscale=1.5, yscale=1.5]
+    \begin{axis}
+    [
+        title = {Zależność przebytej drogi od czasu spadku},
+        axis lines = left,
+        legend pos=north west,
+        xlabel = {czas [s]},
+        ylabel = {droga [m]},
+        xmin = 0, xmax = 11,
+        ymin = 0, ymax = 550,
+        enlargelimits = false,
+    ]
+        \addplot
+        [
+            domain = 0:10,
+            samples = 1000,
+            color = blue,
+        ]
+        {(x^2*9.81)/2};
+        \addlegendentry{\(\frac{1}{2}gt^2\)}
+        
+        \addplot+
+        [
+            only marks,
+            mark = |,
+            scatter,
+        ]
+        plot [error bars/.cd, y dir=both, y explicit]
+        table[meta=droga, y error plus = bladstd, y error minus = bladstd]
+        {dane3.csv};
+        \addlegendentry{pomiary}
+    \end{axis}
+\end{tikzpicture}
 
 \section{Wnioski}
 
